# AgentEye

./: .gitignore  AgentEye_课题成果报告.md  README.md  package-lock.json  package.json
apps/host/: index.html  package.json  vite.config.ts
apps/host/src/: main.tsx  styles.css
apps/host/src-tauri/: Cargo.toml  tauri.conf.json
apps/host/src-tauri/capabilities/: default.json
apps/host/src-tauri/src/: capture_publisher.rs  floating_window.rs  lib.rs  main.rs  pairing.rs  phone_dev_server.rs  state_hub.rs
apps/phone/: index.html  package.json  vite.config.ts
apps/phone/src/: main.tsx  styles.css
docs/: AgentEye_产品架构与设计白皮书.md  AgentEye_通信协议_MVP.md  Phase2_工程初始化说明.md
tools/: agenteye-cli.mjs  clean.ps1  dev-all.mjs  dev-host.mjs  setup-windows-network.ps1  stop-dev.ps1
